Made improvements to StatPanel messages